create pop-up show more info in home page

--- a/html/login.html
+++ b/html/login.html
@@ -30,7 +30,7 @@
                     <label for="password" class="labels" >Password</label>
                     <input name="password" type="password" placeholder="Ex: myPassword" id="password-input" required>
                     <label for="fullName" class="labels full-name-group hide">Your full name</label>
-                    <input name="fullName" type="text" placeholder="Ex: Popescu Ion" class="full-name-group hide" id="full-name-input" required>
+                    <input name="fullName" type="text" placeholder="Ex: Popescu Ion" class="full-name-group hide" id="full-name-input" >
                   </div>
                   <button type="submit" class="submit-button">Submit</button>
                 </form>
