--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Index</title>
     <link rel="stylesheet" href="./css/modal.css" />
     <link rel="stylesheet" href="./css/noutati.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/fontawesome.min.css" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/solid.min.css" >
   </head>
   <body>
     <header>
@@ -134,54 +136,20 @@
     </div>
 
     <div class="basic-grid">
-      <!-- div class="container">
-        <img src="./assets/krumbach.jpeg" alt="" />
-        <button class="addbtn">Add</button>
-        <p id="desc">
-          Lorem ipsum dolor sit amet
-          <span class="pop_button" data-modal-target="#modal">Show more</span>
-        </p>
-      </div> -->
-
-      <!-- <div class="container">
-        <img src="./project-node-app/images/1d32a3d9ff33bd5ebcd4feaf0dd976da.png" alt="" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-          excepturi ducimus iste consectetur praesentium sed expedita rem error
-          illum commodi.
-          <span class="pop_button" data-modal-target="#modal">Show more</span>
-        </p>
-        <button class="addbtn">Add</button>
-      </div>  -->
     </div>
 
-    <!--MODAL -->
-    <div class="modal" id="modal">
-      <div class="modal-header">
-        <div class="title">Title</div>
-        <button data-close-button class="close-button">&times;</button>
+    <!-- <div id="pop-up-modal">
+      <p id="pop-up-title">Title</p>
+      <p id= "pop-up-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum alias sunt cumque officia, reprehenderit nihil ipsum dolore. Sunt ad illum distinctio libero cumque labore cum placeat a pariatur! Eligendi, consequatur.</p>
+      <div id="pop-up-close-container">
+        <i class="fas fa-times pop-up-close-icon"></i>
+        <p>CLOSE</p>
       </div>
-      <div class="modal-body">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, nulla
-        praesentium. Quia velit amet maxime magni. Illo impedit placeat quae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
-        accusantium nam veniam nulla quo similique cupiditate odio aut
-        laboriosam autem modi perspiciatis, rem numquam, animi fugiat ipsa
-        officiis. Perspiciatis reiciendis quisquam impedit voluptatem, repellat
-        aperiam error expedita illum debitis dolor in suscipit ipsa totam quo
-        doloribus hic libero laboriosam harum unde magnam incidunt?
-        Reprehenderit doloribus cupiditate, facere laborum rerum aliquam ipsam
-        sit quam eos fuga vel deleniti aut earum quod sed veritatis, fugit
-        optio, iste delectus nulla itaque commodi accusantium?
-      </div>
-    </div>
-    <div id="overlay"></div>
+    </div> -->
 
-    <!--MODAL -->
     <script src="./js/HamburgerMenu.js"></script>
     <script src="./js/dropdown.js"></script>
     <script src="./js/shrinkHeaderTitle.js"></script>
-    <script src="./js/modal.js"></script>
     <script src="./index.js"></script>
     <script src="./js/filters.js"></script>
   </body>
