--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <a href="./html/export.html">Statistics</a>
             <a href="./html/upload.html">Upload article</a>
             <a href="../html/adminPanel.html">Admin panel</a>
-            <a href="../html/chart.html">Most popular</a>
           </div>
         </div>
         <div>
@@ -133,29 +132,7 @@
       </div>
     </div>
 
-    <div class="basic-grid">
-      <!-- <div class="container">
-        <img src="./assets/krumbach.jpeg" alt="" />
-        <button class="addbtn">Add</button>
-        <p>
-          Lorem ipsum dolor sit amet
-          <span class="pop_button" data-modal-target="#modal">Show more</span>
-        </p>
-      </div> -->
-
-      <!-- <div class="container">
-        <img
-          src="./project-node-app/images/1d32a3d9ff33bd5ebcd4feaf0dd976da.png"
-          alt=""
-        />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-          excepturi ducimus iste consectetur praesentium sed expedita rem error
-          illum commodi.
-          <span class="pop_button" data-modal-target="#modal">Show more</span>
-        </p>
-      </div> -->
-    </div>
+    <div class="basic-grid"></div>
 
     <!--MODAL -->
     <div class="modal" id="modal">
