--- a/html/upload.html
+++ b/html/upload.html
@@ -65,14 +65,20 @@
           name="year"
           required
         /><br />
-        <input
-          class="inpText"
-          type="text"
-          placeholder="Brand"
-          id="brand"
-          name="brand"
-          required
-        /><br />
+        <label for="brand">Brand:</label>
+        <select name="brand" id="brand" class="inpText">
+          <option value="Coca Cola">Coca Cola</option>
+          <option value="Pepsi">Pepsi</option>
+          <option value="Sprite">Sprite</option>
+          <option value="Bergenbier">Bergenbier</option>
+          <option value="Timisoreana">Timisoreana</option>
+          <option value="Adria">Adria</option>
+          <option value="Jack Daniels">Jack Daniels</option>
+          <option value="Smirnoff">Smirnoff</option>
+          <option value="Peroni">Peroni</option>
+          <option value="Borsec">Boresc</option>
+          <option value="Coca Cola">Coca Cola</option>
+        </select>
         <label for="alcoholic" class="checkLab"
           >Is alcoholic:
           <input
