add logou nav on uploade page

--- a/html/adminPanel.html
+++ b/html/adminPanel.html
@@ -27,7 +27,7 @@
         </div>
         <div id="userLogin" onclick="navigateToLogin()">
           <span style="display: flex;">
-            <div>Login</div>
+            <p>Login</p>
             <img src="../assets/user.svg" alt="Login" />
           </span>
         </div>
