--- a/html/upload.html
+++ b/html/upload.html
@@ -215,13 +215,14 @@
           menuContainer.appendChild(adminPage);
         }
         let logout = document.createElement('a');
-        logout.href = '';
+        logout.href = '../index.html';
         logout.innerHTML = 'Logout';
         menuContainer.appendChild(logout);
 
         logout.addEventListener('click', function () {
           localStorage.removeItem('Authorization');
-          window.location.replace('http://localhost:5500/index.html');
+          conosle.log("aici");
+          // window.location.replace('http://localhost:5500/index.html');
         })
       }
     };
