validate html and css

--- a/html/adminPanel.html
+++ b/html/adminPanel.html
@@ -26,10 +26,10 @@
           <img src="../assets/logo.svg" id="miniLogo" alt="" />
         </div>
         <div id="userLogin" onclick="navigateToLogin()">
-          <span style="display: flex;">
+          <div style="display: flex;">
             <p>Login</p>
             <img src="../assets/user.svg" alt="Login" />
-          </span>
+          </div>
         </div>
         <div
           class="headerMenu"
@@ -54,10 +54,9 @@
           <div id="chosen-user">
             <p>User `s articles</p>
           </div>
-
         </div>
         </div>
-      </div>
+      <!-- </div> -->
 
       <div class="update-article-dialog dialog-hidden">
         <p id="dialog-article">Update article</p>
@@ -163,7 +162,7 @@
         </div>
 
         <div class="inputs-container">
-          <label for="input-alcoholic">Alcoholic</label>
+          <label for="alcoholic-checkbox">Alcoholic</label>
           <input type="checkbox" name="input-alcoholic" id="alcoholic-checkbox">
         </div>
 
