--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <img src="./assets/logo.svg" id="miniLogo" alt="" />
         </div>
         <div id="userLogin" onclick="navigateToLogin()">
-          <span style="display: flex;">
+          <div style="display: flex;">
             <p>Login</p>
             <img src="./assets/user.svg" alt="Login" />
-          </span>
+          </div>
         </div>
         <div
           class="headerMenu"
@@ -51,7 +51,7 @@
 
         <div id="myDropdown" class="dropdown-content">
           <form>
-            <label for="country">Country:</label>
+            <label for="countries">Country:</label>
             <select name="Countries" id="countries">
               <option value="Any">Any</option>
               <option value="Russia">Russia</option>
@@ -97,7 +97,7 @@
               <option value="Iceland">Iceland</option>
             </select>
 
-            <label for="type">Collection type:</label>
+            <label for="post_type">Collection type:</label>
             <select name="Collection type" id="post_type">
               <option value="Any">Any</option>
               <option value="Cap">Cap</option>
@@ -105,7 +105,7 @@
               <option value="Label">Label</option>
             </select>
 
-            <label for="value">Price range:</label>
+            <label for="price_range">Price range:</label>
             <select name="Value" id="price_range">
               <option value="Any">Any</option>
               <option value="Under 100">Under 100</option>
@@ -120,7 +120,7 @@
               <option value="Over 5.000">Over 5.000</option>
             </select>
 
-            <label for="state">Current state:</label>
+            <label for="stat">Current state:</label>
             <select name="Current state" id="stat">
               <option value="Any">Any</option>
               <option value="Brand New">Brand New</option>
